<resources>
    <string name="app_name">Health365</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="notification_sleep_ticker">Notification Sleep Ticker</string>
    <string name="notification_sleep_title">Notification Sleep Title</string>
    <string name="notification_sleep_text">Notification Sleep Test</string>
    <string name="message_not_calibrated">Message Not Calibrated</string>
    <string name="message_prefs_not_compatible">Message Prefs Not Compatible</string>
    <string name="message_recommend_calibration">Message Recommended Calibration</string>
    <string name="pref_alarm_trigger_sensitivity">Pref Alarm Trigger Sensitivity</string>
    <string name="pref_sensor_delay">Pref Sensor Delay</string>
    <string name="pref_use_alarm">Pref Use Alarm</string>
    <string name="pref_alarm_window">Pref Alarm Window</string>
    <string name="pref_airplane_mode">Pref Airplane Mode</string>
    <string name="pref_silent_mode">Pref Silent Mode</string>
    <string name="pref_force_screen">Pref Force Screen</string>
    <string name="notification_save_sleep_ticker">Notification Save Sleep Ticker</string>
    <string name="notification_save_sleep_title">Notification Save Sleep Title</string>
    <string name="notification_save_sleep_text">Notification Save Sleep Text</string>
    <string name="to">to</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_clock">ClockActivity</string>
    <string name="title_activity_workout">WorkoutActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_new_exercise_dialog">New Exercise</string>
    <string name="title_new_routine_dialog">New Routine</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="title_activity_emergency_card">EmergencyCardActivity</string>

    <string name="overview_module">Overview</string>
    <string name="workout_module">Workout</string>
    <string name="steps_module">Steps</string>
    <string name="sleep_module">Sleep</string>
    <string name="nutrition_module">Nutrition</string>
    <string name="run_module">Run/Cycle</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>

    <string name="user_name">User Person</string>
    <string name="user_email">user.person@gmail.com</string>

    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="dash">---</string>
    <string name="reset_steps">Reset Steps</string>
    <string name="title_activity_run_tracking">RunTracking</string>

    <string-array
        name="days_of_week">
        <item
            >Sunday</item>
        <item
            >Monday</item>
        <item
            >Tuesday</item>
        <item
            >Wednesday</item>
        <item
            >Thursday</item>
        <item
            >Friday</item>
        <item
            >Saturday</item>
    </string-array>

    <string-array name="repeat_types">
        <item>Once</item>
        <item>Daily</item>
        <item>Specific Days</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prescription_module">Prescription</string>
    <string name="database_module">Databases</string>

    <!-- Google Vision Api String Values. -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
</resources>
