<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_workout"
            android:icon="@drawable/ic_fitness_center_24dp"
            android:title="Workout" />
        <item
            android:id="@+id/nav_steps"
            android:icon="@drawable/ic_menu_steps"
            android:title="@string/steps_module" />
        <item
            android:id="@+id/nav_run"
            android:icon="@drawable/ic_menu_run"
            android:title="@string/run_module" />
        <item
            android:id="@+id/nav_sleep"
            android:icon="@drawable/ic_menu_sleep"
            android:title="@string/sleep_module" />
        <item
            android:id="@+id/nav_nutrition"
            android:icon="@drawable/ic_menu_nutrition"
            android:title="@string/nutrition_module" />
        <item
            android:id="@+id/nav_prescription"
            android:icon="@drawable/ic_alarm"
            android:title="Prescription" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>
</menu>
