<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_steps"
            android:icon="@drawable/ic_menu_steps"
            android:title="@string/steps_module" />
        <item
            android:id="@+id/nav_run"
            android:icon="@drawable/ic_menu_run"
            android:title="@string/run_module" />
        <item
            android:id="@+id/nav_sleep"
            android:icon="@drawable/ic_menu_sleep"
            android:title="@string/sleep_module" />
        <item
            android:id="@+id/nav_nutrition"
            android:icon="@drawable/ic_menu_nutrition"
            android:title="@string/nutrition_module" />
        <item
            android:id="@+id/nav_clock"
            android:icon="@drawable/ic_menu_clock"
            android:title="Clock" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />

    </group>

</menu>
